# openpose

./: .gitignore  CMakeLists.txt
examples/user_code/: CMakeLists.txt  multi_RealSense.cpp
include/openpose/: flags.hpp
include/openpose/producer/: datumProducer.hpp
include/openpose/wrapper/: wrapperAuxiliary.hpp
src/openpose/utilities/: fileSystem.cpp
